# tester-automation

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  activate.sh  ansible.cfg  pyproject.toml
.rules/: COMMON_CASES.md
config/: databases.yml  databases.yml.example
src/self_tester/: __init__.py  cli.py  run_suite.py
src/self_tester/ansible/: merge_cookies.py
src/self_tester/ansible/group_vars/: all.yml
src/self_tester/ansible/inventory/: hosts.yml
src/self_tester/ansible/playbooks/: execute_task.yml  ftp_operations.yml  generate_report.yml  run_all_tests.yml  run_test_case.yml
src/self_tester/ansible/roles/cache_flush_task/tasks/: main.yml
src/self_tester/ansible/roles/cache_get_task/tasks/: main.yml
src/self_tester/ansible/roles/cache_set_task/tasks/: main.yml
src/self_tester/ansible/roles/compare_json_task/tasks/: main.yml
src/self_tester/ansible/roles/curl_task/tasks/: main.yml
src/self_tester/ansible/roles/ftp_download_task/tasks/: main.yml
src/self_tester/ansible/roles/ftp_list_task/tasks/: main.yml
src/self_tester/ansible/roles/grep_file_task/tasks/: main.yml
src/self_tester/ansible/roles/local_log_search_v1_task/tasks/: main.yml
src/self_tester/ansible/roles/sql_query_task/tasks/: main.yml
src/self_tester/ansible/roles/wait_task/tasks/: main.yml
test_cases/: jbatik_e2e_catalog.json  jbatik_e2e_order.json  jbatik_e2e_protected.json  template.json
