[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-tester"
version = "0.1.0"
authors = [
    { name = "Valdie Arsanur" }
]
description = "A native CLI to run Ansible based test cases."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ansible>=8.0.0",
    "requests>=2.28.0",
    "sqlalchemy>=1.4.0",
    "pymysql>=1.0.0",
    "redis>=4.0.0",
    "deepdiff>=6.0.0",
    "pyyaml>=6.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
self-tester = "self_tester.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
